[package]
name = "modbus-master"
version = "0.1.0"
authors = ["Stefan Müller <zzeroo> <s.mueller@zzeroo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = { path = "serialport-rs" }
modbus-core = { path = "modbus-core" }